Test update live site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="nav">
       <a class="logo" href="#">Hidden<span>World</span></a>
       <ul class="nav__links">
-        <li><a href="#grid">Orte</a></li>
+        <li><a href="#grid">Länder</a></li>
         <li><a href="#about">Idee</a></li>
       </ul>
     </nav>
