NZ: Detailseite erstellt

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <h2>Hidden Gems – Erste Auswahl</h2>
       <div class="grid">
         <!-- Bhutan -->
-        <article class="card">
-          <img class="card__img" src="https://images.unsplash.com/photo-1544735716-392fe2489ffa?q=80&w=1200&auto=format&fit=crop" alt="Bhutan Kloster am Felsen">
+        <article class="card card__link">
+          <a href="pages/Bhutan.html"><img class="card__img" src="https://images.unsplash.com/photo-1544735716-392fe2489ffa?q=80&w=1200&auto=format&fit=crop" alt="Bhutan Kloster am Felsen"></a>
           <div class="card__body">
             <h3>Bhutan</h3>
             <p>Himalaya-Königreich mit Glücksindex, Klöstern & dramatischer Natur. Limitierter Tourismus, authentische Kultur.</p>
@@ -49,9 +49,21 @@
           </div>
         </article>
 
+        <!-- New Zealand -->
+        <article class="card card__link">
+          <a href="pages/new-zealand.html"><img class="card__img" src="https://images.squarespace-cdn.com/content/v1/603a3f01543f684c5617dc95/1616865659321-9R9N9R7TEA5B3QJ52Q0W/unsplash-image-ph-ldDJS6vc.jpg" alt="New-Zealand Landschaft"></a>
+          <div class="card__body">
+            <h3>New-Zealand</h3>
+            <p>Sicherheit und Lebensqualität. Sauberkeit und extrem Grüne Natur.</p>
+            <ul class="tags">
+              <li>Sicherheit</li><li>Lebensqualität</li><li>Grün</li>
+            </ul>
+          </div>
+        </article>
+
         <!-- Kiribati -->
-        <article class="card">
-          <img class="card__img" src="https://images.unsplash.com/photo-1500375592092-40eb2168fd21?q=80&w=1200&auto=format&fit=crop" alt="Tropische Lagune Kiribati">
+        <article class="card card__link">
+          <a href="pages/Kiribati.html"><img class="card__img" src="https://images.unsplash.com/photo-1500375592092-40eb2168fd21?q=80&w=1200&auto=format&fit=crop" alt="Tropische Lagune Kiribati"></a>
           <div class="card__body">
             <h3>Kiribati</h3>
             <p>Weit verstreuter Inselstaat im Pazifik: Lagunen, Tauchen, pure Ruhe. Ein echter „weit weg“-Traum.</p>
@@ -62,8 +74,8 @@
         </article>
 
         <!-- Lesotho -->
-        <article class="card">
-          <img class="card__img" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=1200&auto=format&fit=crop" alt="Bergplateau in Lesotho">
+        <article class="card card__link">
+          <a href="pages/Lesotho.html"><img class="card__img" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=1200&auto=format&fit=crop" alt="Bergplateau in Lesotho"></a>
           <div class="card__body">
             <h3>Lesotho</h3>
             <p>„Königreich im Himmel“ – ein ganzes Land über 1.000 m. Bergpässe, Reiten, klare Luft, wenig Tourismus.</p>
